--- a/www/admin/tpl/user_edit.html
+++ b/www/admin/tpl/user_edit.html
@@ -1,23 +1,31 @@
 <form class="form-horizontal" role="form">
     <div class="alert alert-info">Edit User</div>
+
+    <div class="form-group">
+        <label for="name" class="col-sm-1 control-label">Name</label>
+        <div class="col-sm-3">
+            <input type="text" class="form-control" name="name" placeholder="" required autofocus ng-model="user.name">
+        </div>
+    </div>
+
     <div class="form-group">
         <label for="email" class="col-sm-1 control-label">Email</label>
         <div class="col-sm-3">
-            <input type="text" class="form-control" name="email" placeholder="" required autofocus ng-model="user.Email">
+            <input type="text" class="form-control" name="email" placeholder="" required autofocus ng-model="user.email">
         </div>
     </div>
 
     <div class="form-group">
         <label for="password" class="col-sm-1 control-label">Password</label>
         <div class="col-sm-3">
-            <input type="password" class="form-control" name="password" required ng-model="user.Password" placeholder="">
+            <input type="password" class="form-control" name="password" required ng-model="user.password" placeholder="">
         </div>
     </div>
 
     <div class="form-group">
-        <label for="group" class="col-sm-1 control-label">Group</label>
+        <label for="role" class="col-sm-1 control-label">Role</label>
         <div class="col-sm-3">
-            <input type="text" class="form-control" name="group" required ng-model="user.Group" placeholder="">
+            <input type="text" class="form-control" name="role" required ng-model="user.role" placeholder="">
         </div>
     </div>
 
